Ported world building and shader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ opt-level = 0
 [dependencies]
 bevy = { version = "0.16.0", features = ["dynamic_linking", "file_watcher"] }
 bevy_app_compute = { path = "bevy_app_compute" }
+bytemuck = "1.13.1"
 
